se añadieron endopints de integracion ia y whatsap
